Add project config and dependencies for kitchen assistant MVP
- Rename AGENTS.md to CLAUDE.md with updated project instructions
- Add blueprint.md with app specification
- Add Supabase, Google Sign-In, NativeWind, and camera dependencies
- Update .gitignore to exclude .env and .mcp.json
- Remove unused explore tab

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,11 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
 .env*.local
+
+# MCP config (contains project refs)
+.mcp.json
 
 # typescript
 *.tsbuildinfo
