--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@expo/cli": "^54.0.23",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.95.3",
     "expo": "~54.0.33",
+    "expo-auth-session": "~7.0.10",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
